--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "autogen-agentchat>=0.4.9.2",
     "autogen-ext[grpc,mcp,ollama,openai]>=0.4.9.2",
     "bs4>=0.0.2",
+    "google-adk>=0.5.0",
     "google-genai>=1.14.0",
     "gradio>=5.22.0",
     "httpx>=0.28.1",
@@ -24,7 +25,8 @@ dependencies = [
     "mcp-server-fetch>=2025.1.17",
     "mcp[cli]>=1.5.0",
     "openai>=1.68.2",
-    "openai-agents>=0.0.6",
+    "openai-agents[viz]>=0.0.6",
+    "pandas>=2.2.3",
     "playwright>=1.51.0",
     "plotly>=6.0.1",
     "polygon-api-client>=1.14.5",
